--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
   .logo {
     display: block;
     margin: auto;
-    margin-left: 9rem;
+  /*  margin-left: 9rem;  */
     border-radius: 50%;
     width: 80px;
     height: 80px;
