--- a/index.html
+++ b/index.html
@@ -177,7 +177,7 @@ box-shadow: 0px 2px 7px #4d4d4d;
 
 <div class="header">
   <a href="https://t.me/cointapz"><img src="logo.png" alt="Logo" class="logo"></a>
-  <div class="back-icon" onclick="history.back()">🡰</div>
+  <div class="back-icon" onclick="history.back()"><</div>
 </div>
 
 <div class="description">
