--- a/index.html
+++ b/index.html
@@ -1,6 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
+
 <meta name="viewport" content="width=device-width, initial-scale=1.0, maximum-scale=1.0, user-scalable=no" />
 <link rel="preconnect" href="https://fonts.googleapis.com">
 <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
@@ -14,10 +15,10 @@
     font-family: "Vazirmatn", sans-serif;
     background-color: #333; /* Dark gray background */
     color: #000; /* Black font color */
-
-
-
-
+/* disable horizontal scroll
+    max-width: 100%;
+    overflow-x: hidden;
+*/
   }
   .header {
     background-color: rgb(78 78 78 / 50%);
