--- a/index.html
+++ b/index.html
@@ -15,10 +15,10 @@
     font-family: "Vazirmatn", sans-serif;
     background-color: #333; /* Dark gray background */
     color: #000; /* Black font color */
-/* disable horizontal scroll
+/* disable horizontal scroll */
     max-width: 100%;
     overflow-x: hidden;
-*/
+
   }
   .header {
     background-color: rgb(78 78 78 / 50%);
