--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     backdrop-filter: blur(10px); /* Increased blur effect */
   }
   .logo {
-  /*   display: block; */
+    display: flex; 
     margin: auto;
   /*  margin-left: 9rem;  */
     border-radius: 50%;
