--- a/index.html
+++ b/index.html
@@ -33,7 +33,7 @@
     backdrop-filter: blur(10px); /* Increased blur effect */
   }
   .logo {
-    display: flex; 
+    display: block; 
     margin: auto;
   /*  margin-left: 9rem;  */
     border-radius: 50%;
@@ -178,7 +178,7 @@ box-shadow: 0px 2px 7px #4d4d4d;
 
 <div class="header">
   <a href="https://t.me/cointapz"><img src="logo.png" alt="Logo" class="logo"></a>
-  <div class="back-icon" onclick="history.back()"></div>
+  <div class="back-icon" onclick="history.back()"><img src="back.png"></div>
 </div>
 
 <div class="description">
@@ -282,7 +282,7 @@ box-shadow: 0px 2px 7px #4d4d4d;
 
 
 
-<div class="to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})">⮬ Top</div>
+<div class="to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})"><img src="up.png"> Top</div>
 
 <script>
   window.addEventListener('scroll', function() {
