--- a/index.html
+++ b/index.html
@@ -178,7 +178,7 @@ box-shadow: 0px 2px 7px #4d4d4d;
 
 <div class="header">
   <a href="https://t.me/cointapz"><img src="logo.png" alt="Logo" class="logo"></a>
-  <div class="back-icon" onclick="history.back()"><img src="back.png"></div>
+  <div class="back-icon" onclick="history.back()"><img src="back.png" width="12" height="12"></div>
 </div>
 
 <div class="description">
@@ -282,7 +282,7 @@ box-shadow: 0px 2px 7px #4d4d4d;
 
 
 
-<div class="to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})"><img src="up.png"> Top</div>
+<div class="to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})"><img src="up.png" width="8" height="8"> Top</div>
 
 <script>
   window.addEventListener('scroll', function() {
