--- a/index.html
+++ b/index.html
@@ -173,16 +173,15 @@ box-shadow: 0px 2px 7px #4d4d4d;
 
 
 .card {
-  position: relative; /* این به .icon اجازه می‌دهد تا نسبت به .card موقعیت‌دهی شود */
+  position: relative; 
 }
 
 .icon {
   position: absolute;
-  top: 10px; /* فاصله از بالا */
-  right: 10px; /* فاصله از سمت راست */
-  width: 20px; /* عرض آیکن */
-  height: 20px; /* ارتفاع آیکن */
-  /* اضافه کردن تصویر آیکن */
+  top: 10px;
+  right: 10px; 
+  width: 20px; 
+  height: 20px; 
   background-image: url('icon-path.png');
   background-size: cover;
 }
@@ -214,7 +213,7 @@ box-shadow: 0px 2px 7px #4d4d4d;
   <!-- Repeat this block for each card -->
   <a href="link-to-somewhere" class="card">
 
-  <div class="icon"><img src="fire.png"></div> <!-- آیکن جدید اضافه شده -->
+  <div class="icon"><img src="fire.png"></div>
     
     <div class="card-header">
       <img src="hamster.jpg" alt="Card Logo" class="card-logo">
