--- a/index.html
+++ b/index.html
@@ -36,9 +36,9 @@
     display: flex; 
     margin: auto;
   /*  margin-left: 9rem;  */
-    border-radius: 50%;
+   /*  border-radius: 50%;  */
     width: 80px;
-    height: 80px;
+ /*    height: 80px; */
   }
   .description {
     text-align: center;
