--- a/index.html
+++ b/index.html
@@ -45,7 +45,7 @@
     padding: 50px 20px 0; /* Reduced top padding */
     color: #fff; /* Description text color changed to white */
     position: relative; /* Ensure it's visible under the header */
-    padding-top: 80px; /* Add space for the fixed header */
+ /*   padding-top: 80px;  Add space for the fixed header */
   }
   .back-icon {
     position: absolute;
