--- a/index.html
+++ b/index.html
@@ -87,6 +87,7 @@ color:white;
   }
   .card:hover {
     transform: translateY(-5px);
+    box-shadow: rgba(0, 0, 0, 0.09) 0px 2px 1px, rgba(0, 0, 0, 0.09) 0px 4px 2px, rgba(0, 0, 0, 0.09) 0px 8px 4px, rgba(0, 0, 0, 0.09) 0px 16px 8px, rgba(0, 0, 0, 0.09) 0px 32px 16px;
   }
   .card-header {
     background-color: #1a1a1a;
