--- a/index.html
+++ b/index.html
@@ -23,7 +23,7 @@
   .header {
     background-color: rgb(78 78 78 / 50%);
 
-    padding: 10px;
+    padding-block: 10px;
     text-align: center;
     position: fixed;
     width: 100%;
