--- a/index.html
+++ b/index.html
@@ -203,7 +203,9 @@ box-shadow: 0px 2px 7px #4d4d4d;
 </div>
 
 <div class="description">
-  <p>A Big List of Tap Bots Are Here! Enjoy 😉</p>
+  <pr>A Big List of Tap Bots Are Here! Enjoy 😉
+    Last Update: June 2024
+  </pr>
   <p>به کانال خودتون هم سر بزنید، کلی اخبار جذاب داریم</p>
 </div>
 
