--- a/index.html
+++ b/index.html
@@ -219,7 +219,7 @@ box-shadow: 0px 2px 7px #4d4d4d;
   <div class="icon"><img src="fire.png"></div>
     
     <div class="card-header">
-      <img src="hamster.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/hamster.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Hamster Kombat</span>
     </div>
     <div class="card-info">
@@ -232,7 +232,7 @@ box-shadow: 0px 2px 7px #4d4d4d;
   <!-- Repeat this block for each card -->
   <a href="link-to-somewhere" class="card">
     <div class="card-header">
-      <img src="tapswap.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/tapswap.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">TapSwap</span>
     </div>
     <div class="card-info">
@@ -247,7 +247,7 @@ box-shadow: 0px 2px 7px #4d4d4d;
   <!-- Repeat this block for each card -->
   <a href="link-to-somewhere" class="card">
     <div class="card-header">
-      <img src="notcoin.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/notcoin.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Notcoin</span>
     </div>
     <div class="card-info">
@@ -261,7 +261,7 @@ box-shadow: 0px 2px 7px #4d4d4d;
   <!-- Repeat this block for each card -->
   <a href="link-to-somewhere" class="card">
     <div class="card-header">
-      <img src="catizen.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/catizen.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Catizen</span>
     </div>
     <div class="card-info">
@@ -276,7 +276,7 @@ box-shadow: 0px 2px 7px #4d4d4d;
   <!-- Repeat this block for each card -->
   <a href="link-to-somewhere" class="card">
     <div class="card-header">
-      <img src="memefi.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/memefi.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Memefi</span>
     </div>
     <div class="card-info">
@@ -290,7 +290,7 @@ box-shadow: 0px 2px 7px #4d4d4d;
   <!-- Repeat this block for each card -->
   <a href="link-to-somewhere" class="card">
     <div class="card-header">
-      <img src="yescoin.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/yescoin.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Yescoin</span>
     </div>
     <div class="card-info">
