--- a/index.html
+++ b/index.html
@@ -203,9 +203,9 @@ box-shadow: 0px 2px 7px #4d4d4d;
 </div>
 
 <div class="description">
-  <pr>A Big List of Tap Bots Are Here! Enjoy 😉
+  <pre>A Big List of Tap Bots Are Here! Enjoy 😉
     Last Update: June 2024
-  </pr>
+  </pre>
   <p>به کانال خودتون هم سر بزنید، کلی اخبار جذاب داریم</p>
 </div>
 
