--- a/index.html
+++ b/index.html
@@ -18,9 +18,9 @@
 </div>
 
 <div class="description">
-  <pre>A Big List of Tap Bots Are Here! Enjoy 😉
-  📅Last Update: June 2024
-  </pre>
+  <p>A Big List of Tap Bots Are Here! Enjoy 😉
+  <pre>📅 Last Update: June 2024</pre>
+  </p>
   <p>به کانال خودتون هم سر بزنید، کلی اخبار جذاب داریم</p>
 </div>
 
@@ -75,7 +75,7 @@
     </div>
     <div class="card-info">
 <div>Total Players: +35M</div>
-      <div><span class="status-light gray"></span><b>Active</b></div>
+      <div><span class="status-light gray"></span><b>Listed</b></div>
     </div>
   </a>
   <!-- End of card block -->
