--- a/index.html
+++ b/index.html
@@ -75,7 +75,7 @@
     </div>
     <div class="card-info">
 <div>Total Players: +35M</div>
-      <div><span class="status-light white"></span><b>Listed</b></div>
+      <div>✅<b>Listed</b></div>
     </div>
   </a>
   <!-- End of card block -->
