--- a/index.html
+++ b/index.html
@@ -129,6 +129,50 @@
 
 
   <!-- Repeat this block for each card -->
+  <a href="https://t.me/wcoin_tapbot?start=NjI5OTI0NTk3Mw==" class="card">
+    <div class="card-header">
+      <img src="icons/wcoin.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">W-Coin</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="http://t.me/BlumCryptoBot/app?startapp=ref_d3XKhi1ipR" class="card">
+    <div class="card-header">
+      <img src="icons/blum.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Blum</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="https://t.me/pixelversexyzbot?start=6299245973" class="card">
+
+    <div class="icon"><img src="fire.png"></div>
+    <div class="card-header">
+      <img src="icons/pixeltap.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">PixelTap</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +2M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
   <a href="1111111111111111111111111111111111" class="card">
     <div class="card-header">
       <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
@@ -142,6 +186,162 @@
   <!-- End of card block -->
 
 
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+
+  <!--
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+ -->
+
+
+  
 </div>
 
 
