--- a/index.html
+++ b/index.html
@@ -173,10 +173,24 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="1111111111111111111111111111111111" class="card">
+  <a href="https://t.me/dotcoin_bot?start=r_6299245973" class="card">
     <div class="card-header">
-      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">3333333333333333333</span>
+      <img src="icons/dotcoin.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">DotCoin</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: +12M</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="https://t.me/herewalletbot/app?startapp=833483" class="card">
+    <div class="card-header">
+      <img src="icons/hot.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Near HOT</span>
     </div>
     <div class="card-info">
 <div>Total Players: 444444444444444</div>
@@ -187,10 +201,10 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="1111111111111111111111111111111111" class="card">
+  <a href="https://t.me/cexio_tap_bot?start=1716285067582801" class="card">
     <div class="card-header">
-      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">3333333333333333333</span>
+      <img src="icons/cexio.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">CEX IO</span>
     </div>
     <div class="card-info">
 <div>Total Players: 444444444444444</div>
@@ -201,10 +215,10 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="1111111111111111111111111111111111" class="card">
+  <a href="https://t.me/gamee?start=ref_6299245973" class="card">
     <div class="card-header">
-      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">3333333333333333333</span>
+      <img src="icons/gamee.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Gamee</span>
     </div>
     <div class="card-info">
 <div>Total Players: 444444444444444</div>
@@ -215,10 +229,10 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="1111111111111111111111111111111111" class="card">
+  <a href="https://t.me/Simple_Tap_Bot?start=1715453870454" class="card">
     <div class="card-header">
-      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">3333333333333333333</span>
+      <img src="icons/simple.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Simple Coin</span>
     </div>
     <div class="card-info">
 <div>Total Players: 444444444444444</div>
@@ -229,24 +243,10 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="1111111111111111111111111111111111" class="card">
+  <a href="https://t.me/onchaincoin_bot?start=user_6299245973" class="card">
     <div class="card-header">
-      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">3333333333333333333</span>
-    </div>
-    <div class="card-info">
-<div>Total Players: 444444444444444</div>
-      <div><span class="status-light green"></span><b>Active</b></div>
-    </div>
-  </a>
-  <!-- End of card block -->
-
-
-    <!-- Repeat this block for each card -->
-  <a href="1111111111111111111111111111111111" class="card">
-    <div class="card-header">
-      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">3333333333333333333</span>
+      <img src="icons/chaingame.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Chain Game</span>
     </div>
     <div class="card-info">
 <div>Total Players: 444444444444444</div>
