--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/Simple_Tap_Bot?start=1715453870454" class="card">
     <div class="card-header">
-      <img src="icons/simple.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/simplecoin.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Simple Coin</span>
     </div>
     <div class="card-info">
