--- a/index.html
+++ b/index.html
@@ -257,10 +257,10 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="1111111111111111111111111111111111" class="card">
+  <a href="https://t.me/Poplaunchbot?start=r_109821_6299245973" class="card">
     <div class="card-header">
-      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">3333333333333333333</span>
+      <img src="icons/pop.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Pop Luanch</span>
     </div>
     <div class="card-info">
 <div>Total Players: 444444444444444</div>
@@ -271,10 +271,10 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="1111111111111111111111111111111111" class="card">
+  <a href="https://t.me/catgoldminerbot?start=6299245973" class="card">
     <div class="card-header">
-      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">3333333333333333333</span>
+      <img src="icons/catgoldminer.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Cat Gold Miner</span>
     </div>
     <div class="card-info">
 <div>Total Players: 444444444444444</div>
@@ -285,10 +285,10 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="1111111111111111111111111111111111" class="card">
+  <a href="https://t.me/The_Rocket_bot?start=r_6299245973" class="card">
     <div class="card-header">
-      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">3333333333333333333</span>
+      <img src="icons/rocket.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">The Rocket</span>
     </div>
     <div class="card-info">
 <div>Total Players: 444444444444444</div>
@@ -299,10 +299,10 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="1111111111111111111111111111111111" class="card">
+  <a href="https://t.me/TomClicker_bot?start=6299245973" class="card">
     <div class="card-header">
-      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">3333333333333333333</span>
+      <img src="icons/tom.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Tom Clicker</span>
     </div>
     <div class="card-info">
 <div>Total Players: 444444444444444</div>
@@ -313,10 +313,10 @@
 
 
     <!-- Repeat this block for each card -->
-  <a href="1111111111111111111111111111111111" class="card">
+  <a href="https://t.me/BBQCoin_bot?start=r_6299245973" class="card">
     <div class="card-header">
-      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
-      <span class="card-name">3333333333333333333</span>
+      <img src="icons/bbqcoin.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">BBQ Coin</span>
     </div>
     <div class="card-info">
 <div>Total Players: 444444444444444</div>
