--- a/index.html
+++ b/index.html
@@ -326,6 +326,286 @@
   <!-- End of card block -->
 
 
+  <!-- Repeat this block for each card -->
+  <a href="https://t.me/BullApp_bot?start=6299245973_0" class="card">
+    <div class="card-header">
+      <img src="icons/bullrun.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Bull Run</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+
+    <!-- Repeat this block for each card -->
+  <a href="http://t.me/vertus_app_bot/app?startapp=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/vertus.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Vertus</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="https://t.me/pocketfi_bot/Mining?startapp=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/pocketfi.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Pocketfi</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="https://t.me/wormfare_slap_bot?start=r_6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/wormfare.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Wormfare Slap</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="https://t.me/monorixbot?start=6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/monorix.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Monorix</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="https://t.me/Shuttle_ton_bot?start=r_6299245973" class="card">
+    <div class="card-header">
+      <img src="icons/shuttle.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Shuttle</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="https://t.me/spinnercoin_bot?start=r_27240" class="card">
+    <div class="card-header">
+      <img src="icons/spinner.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">Spinner Coin</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+
+
+    <!-- Repeat this block for each card -->
+  <a href="1111111111111111111111111111111111" class="card">
+    <div class="card-header">
+      <img src="icons/22222222222222222222.jpg" alt="Card Logo" class="card-logo">
+      <span class="card-name">3333333333333333333</span>
+    </div>
+    <div class="card-info">
+<div>Total Players: 444444444444444</div>
+      <div><span class="status-light green"></span><b>Active</b></div>
+    </div>
+  </a>
+  <!-- End of card block -->
+  
 
   <!--
   <a href="1111111111111111111111111111111111" class="card">
