--- a/index.html
+++ b/index.html
@@ -231,7 +231,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/Simple_Tap_Bot?start=1715453870454" class="card">
     <div class="card-header">
-      <img src="icons/simplecoin.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/simpletap.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Simple Coin</span>
     </div>
     <div class="card-info">
@@ -273,7 +273,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/catgoldminerbot?start=6299245973" class="card">
     <div class="card-header">
-      <img src="icons/catgoldminer.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/goldcatminer.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Cat Gold Miner</span>
     </div>
     <div class="card-info">
