--- a/index.html
+++ b/index.html
@@ -29,9 +29,20 @@
 </div>
 <div class="card-container" id="card-container"  >
 
+
+<ul class="nav">
+    <li class="nav-item active" id="showAll">All</li> <!-- New item -->
+    <li class="nav-item" id="option2">Trends</li>
+    <li class="nav-item" id="option3">Newest</li>
+    <li class="nav-item" id="option4">Most Players</li>
+
+</ul>
+
+
+
   
   <!-- Repeat this block for each card -->
-  <a href="https://t.me/hamster_kombat_bot?start=kentId6299245973" class="card">
+  <a href="https://t.me/hamster_kombat_bot?start=kentId6299245973" class="card" id="card2">
     
   <div class="icon"><img src="fire.png"></div>
     <div class="card-header">
@@ -48,7 +59,7 @@
 
   
   <!-- Repeat this block for each card -->
-  <a href="https://t.me/tapswap_bot?start=r_6299245973" class="card">
+  <a href="https://t.me/tapswap_bot?start=r_6299245973" class="card" id="card2">
     
     <div class="icon"><img src="fire.png"></div>
     <div class="card-header">
@@ -657,7 +668,54 @@
     }
   }
 document.addEventListener('contextmenu', event => event.preventDefault());
+
+
+
+    const navItems = document.querySelectorAll('.nav-item');
+    const cards = document.querySelectorAll('.card');
+
+    navItems.forEach(item => {
+        item.addEventListener('click', () => {
+            if (item.id === 'showAll') {
+                // Show all cards when "Show All" is clicked
+                cards.forEach(card => card.style.display = 'block');
+            } else {
+                // Hide the corresponding card if it's not the active one
+                const cardId = item.id.replace('option', 'card');
+                cards.forEach(card => {
+                    if (card.id === cardId) {
+                        card.style.display = 'block';
+                    } else {
+                        card.style.display = 'none';
+                    }
+                });
+            }
+            // Add 'active' class to the clicked nav item
+            navItems.forEach(nav => nav.classList.remove('active'));
+            item.classList.add('active');
+        });
+    });
   
+
+
+
+function disableSelect(event) {
+    event.preventDefault();
+}
+
+function startDrag(event) {
+    window.addEventListener('mouseup', onDragEnd);
+    window.addEventListener('selectstart', disableSelect);
+    // ... my other code
+}
+
+function onDragEnd() {
+    window.removeEventListener('mouseup', onDragEnd);
+    window.removeEventListener('selectstart', disableSelect);
+    // ... my other code
+}
+
+
 </script>
 
 </body>
