--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
   <!-- Repeat this block for each card -->
   <a href="https://t.me/hamster_kombat_bot?start=kentId6299245973" class="card" id="card2">
     
-  <div class="icon"><img src="trend.svg"></div>
+    <div class="icon"><img src="trend.svg" width="32" height="32"></div>
     <div class="card-header">
       
       <img src="icons/hamster.jpg" alt="Card Logo" class="card-logo">
