--- a/index.html
+++ b/index.html
@@ -640,7 +640,7 @@
 
 
 
-<div class="to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})"><img src="up.png" width="12" height="12"> Top</div>
+<div class="to-top" onclick="window.scrollTo({top: 0, behavior: 'smooth'})"><img src="up.svg" width="24" height="24"></div>
 
 <script>
   window.addEventListener('scroll', function() {
