--- a/index.html
+++ b/index.html
@@ -33,8 +33,8 @@
 <ul class="nav">
     <li class="nav-item active" id="showAll">All</li> <!-- New item -->
     <li class="nav-item" id="option2">Trend</li>
-    <li class="nav-item" id="option3">Newest</li>
-    <li class="nav-item" id="option4">Most Players</li>
+    <li class="nav-item" id="option3">Most Players</li>
+    <li class="nav-item" id="option4">Listed</li>
 
 </ul>
 
