--- a/index.html
+++ b/index.html
@@ -480,7 +480,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/iogreed_bot?start=r_96556d40973c" class="card">
     <div class="card-header">
-      <img src="icons/lavarush.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/lava.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Lava Rush</span>
     </div>
     <div class="card-info">
@@ -508,7 +508,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/LumberJackGame_bot?start=73101714579505" class="card">
     <div class="card-header">
-      <img src="icons/lumberjack.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/lamberjack.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Lumber Jack</span>
     </div>
     <div class="card-info">
@@ -550,7 +550,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/goldwallet_mine_xaut_bot?start=r_6299245973" class="card">
     <div class="card-header">
-      <img src="icons/xaut.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/xau.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">XAUT</span>
     </div>
     <div class="card-info">
@@ -648,7 +648,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/bunnyAppBot?start=r_6299245973" class="card">
     <div class="card-header">
-      <img src="icons/bunnyapp.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/bunny.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Bunny App</span>
     </div>
     <div class="card-info">
@@ -662,7 +662,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/EarthcoinApp_bot?start=ref_angrlmu" class="card">
     <div class="card-header">
-      <img src="icons/earth.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/earthcoin.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Earth Coin</span>
     </div>
     <div class="card-info">
@@ -676,7 +676,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/metaboss_2024_bot?start=ref_6299245973" class="card">
     <div class="card-header">
-      <img src="icons/metaboos.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/metaboss.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Meta Boss</span>
     </div>
     <div class="card-info">
@@ -704,7 +704,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/TapFantasyGameBot?start=7hA9ssPn6Mbc8BSLLs7RRq" class="card">
     <div class="card-header">
-      <img src="icons/tapfantasy.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/fantasy.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Tap Fantasy</span>
     </div>
     <div class="card-info">
@@ -732,7 +732,7 @@
     <!-- Repeat this block for each card -->
   <a href="http://t.me/seed_coin_bot/app?startapp=6299245973" class="card">
     <div class="card-header">
-      <img src="icons/seedapp.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/seed.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Seed App</span>
     </div>
     <div class="card-info">
@@ -844,7 +844,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/gemzcoin_bot?start=referral_6299245973" class="card">
     <div class="card-header">
-      <img src="icons/gemzcoin.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/gemz.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">GemzCoin</span>
     </div>
     <div class="card-info">
@@ -858,7 +858,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/cellcoin_bot?start=6299245973" class="card">
     <div class="card-header">
-      <img src="icons/cellcoin.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/cell.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Cell Coin</span>
     </div>
     <div class="card-info">
@@ -872,7 +872,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/CyberbaseFarm_bot?start=6299245973" class="card">
     <div class="card-header">
-      <img src="icons/cybasefarm.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/cybase.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Cybase Farm</span>
     </div>
     <div class="card-info">
@@ -900,7 +900,7 @@
     <!-- Repeat this block for each card -->
   <a href="http://t.me/roketo_lunar_bot?start=ref_rgcMc" class="card">
     <div class="card-header">
-      <img src="icons/roketolunar.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/roketo.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Roketo Lunar</span>
     </div>
     <div class="card-info">
@@ -928,7 +928,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/mtkbossbot?start=ref6299245973" class="card">
     <div class="card-header">
-      <img src="icons/mtkmafia.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/mtk.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">MTK Clicker Mafia</span>
     </div>
     <div class="card-info">
@@ -942,7 +942,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/holdwallet_bot/app?startapp=DH017776DD95" class="card">
     <div class="card-header">
-      <img src="icons/holdwallet.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/hold.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Hold Wallet</span>
     </div>
     <div class="card-info">
@@ -956,7 +956,7 @@
     <!-- Repeat this block for each card -->
   <a href="https://t.me/drumtap_bot?start=1716917986497184" class="card">
     <div class="card-header">
-      <img src="icons/wigwamdrum.jpg" alt="Card Logo" class="card-logo">
+      <img src="icons/wigwam.jpg" alt="Card Logo" class="card-logo">
       <span class="card-name">Wigwam Drum</span>
     </div>
     <div class="card-info">
